--- a/site/assets/main.scss
+++ b/site/assets/main.scss
@@ -54,7 +54,7 @@
 }
 
 
-{% bookshop_scss %}
+// {% bookshop_scss %}
 {% include sass/navigation.scss %}
 {% include sass/site.scss %}
 {% include sass/footer.scss %}
