--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
 		{% else %}
 			<section class="quote-section">
 				<p class="container editable">
-					<a href="{{ site.baseurl }}/blog/">Read our blog</a> for an introduction and quick tips on various areas of the law.
+					<a href="{{ site.baseurl }}/blog/">Baca blog kami</a> untuk mendapatkan pengenalan dan tips praktis seputar berbagai aspek hukum. 
 				</p>
 			</section>
 		{% endif %}
