--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,7 +102,7 @@
 
 			<div class="legal-line">
 				<p class="container">
-					&copy; {{ site.time | date: '%Y' }} {{ site.data.company.title }} &bull;
+					&copy; {{ site.time | date: '%Y' }} Advokat Luthfi &bull;
 					<a href="{{ site.baseurl }}/terms/">Terms</a>
 					&bull;
 					Template by <a href="http://cloudcannon.com/">CloudCannon</a>
