--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,11 @@ layout: default
 {% if page.title %}
 	<div class="page-header">
 		<h2>{{ page.title }}</h2>
+	<style>
+		.page-header h2 {
+			text-shadow: 2px 2px #fefefe;
+		}
+	</style>
 	</div>
 {% endif %}
 
