feat: fix terms

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,7 @@
 		{% elsif page.call_to_action == 'Contact' %}
 			<section class="quote-section">
 				<p class="container editable">
-					<a href="{{ site.baseurl }}/contact/">Hubungi kami</a> hari ini untuk mengetahui bagaimana kami dapat membantu Anda. Konsultasi pertama Anda gratis!.
+					<a href="{{ site.baseurl }}/contact/">Hubungi kami</a> hari ini untuk mengetahui bagaimana kami dapat membantu Anda. Konsultasi pertama Anda <b>gratis</b>!.
 				</p>
 			</section>
 		{% else %}
