--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,20 @@
 		{% seo %}
 		{% feed_meta %}
 
-		<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i">
-		<link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+		<style>
+			/* Critical CSS */
+			body {
+				font-family: 'Quattrocento', serif;
+			}
+			h1, h2, h3, h4, h5, h6 {
+				font-family: 'Vollkorn', serif;
+			}
+			/* Add other critical CSS here */
+		</style>
+		<link rel="preload" href="//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i" as="style" onload="this.onload=null;this.rel='stylesheet'">
+		<noscript><link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quattrocento|Vollkorn:400,400i,700,700i"></noscript>
+		<link rel="preload" href="{{ site.baseurl }}/css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+		<noscript><link rel="stylesheet" href="{{ site.baseurl }}/css/main.css"></noscript>
 		<link rel="apple-touch-icon" href="{{ site.baseurl }}/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/touch-icon.png" sizes="192x192">
 		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/favicon.png">
