fix render background-image if access via mobile
Signed-off-by: Zufar Dhiyaullhaq <zufardhiyaulhaq@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 	</head>
 
 	<body>
-		<header style="background-image: url('{% include relative-src.html src=page.background_image_path %}');" {% if page.large_header %}class="main-hero"{% endif %} class="header">
+		<header style="background-image: url('{% include relative-src.html src=page.background_image_path %}');" class="header {% if page.large_header %}main-hero{% endif %}">
 		<style>
 			@media (max-width: 768px) {
 				.header {
