fix blogpost image
Signed-off-by: Zufar Dhiyaullhaq <zufardhiyaulhaq@gmail.com>

--- a/_includes/post-summary.html
+++ b/_includes/post-summary.html
@@ -16,5 +16,5 @@
 		</p>
 	</div>
 
-	<p class="post-summary-excerpt">{{ include.post.excerpt | remove: '<p>' | remove: '</p>' }}</p>
+	<!-- <p class="post-summary-excerpt">{{ include.post.excerpt | remove: '<p>' | remove: '</p>' }}</p> -->
 </li>
