--- a/_includes/staff-member.html
+++ b/_includes/staff-member.html
@@ -5,7 +5,7 @@
 	<ul class="staff-info">
 		<li>{{ include.member.name }}</li>
 		<li><small>{{ include.member.credentials }}</small></li>
-		<li><a href="tel:{{ site.data.company.phone }}">{{ site.data.company.phone }}</a></p></li>
+		<li><a href="tel:{{ site.data.company.phone }}">{{ site.data.company.phone }}</a></li>
 	</ul>
 </div>
 
